bynkc/tests/fixtures/negative/136_integration_mock_in_integration/src/it.bynk
suite integration "x" {
  wires app.a, app.b
  mocks C = MockC { fn f() -> Effect[Int] { 9 } }
  case "t" { let r <- app.a.ping() expect r == 1 }
}
